style.css
@import url('https://fonts.googleapis.com/css2?family=Comfortaa&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');

.roboto {
  font-family: "Roboto", sans-serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
  font-variation-settings:
    "wdth" 100;
}

html {
  font-family: "roboto", sans-serif;
}

/* CSS RESET */
/* 1. Use a more-intuitive box-sizing model */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* 2. Remove default margin */
*:not(dialog) {
  margin: 0;
}

/* 3. Enable keyword animations */
@media (prefers-reduced-motion: no-preference) {
  html {
    interpolate-size: allow-keywords;
  }
}

body {
  /* 4. Increase line-height */
  line-height: 1.5;
  /* 5. Improve text rendering */
  -webkit-font-smoothing: antialiased;
}

/* 6. Improve media defaults */
img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}

/* 7. Inherit fonts for form controls */
input,
button,
textarea,
select {
  font: inherit;
}

/* 8. Avoid text overflows */
p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}

/* 9. Improve line wrapping */
p {
  text-wrap: pretty;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  text-wrap: balance;
}

/*
  10. Create a root stacking context
*/
#root,
#__next {
  isolation: isolate;
}

body {
  height: 100vh;
  display: grid;
  grid-template: 250px 1fr / minmax(200px, 350px) 1fr;
}

header {
  display: grid;
  grid-auto-flow: row;
  grid-template-rows: 48px 1fr;
  background-color: #FFFFFF;
  grid-area: 1 / 2 / 2 / 3;
  gap: 1em;
  padding: 0 5%;
}

aside {
  background-color: #1992d4;
  grid-area: 1 / 1 / 3 / 2;
}

main {
  background-color: #e2e8f0;
  grid-area: 2 / 2 / 3 / 3;
}

.header-top {
  display: grid;
  grid-auto-flow: column;
  grid-template-columns: 48px 4fr 48px 48px 1fr;
  height: 48px;
  gap: 2em;
  margin-top: 3%;
}

.avatar {
  max-width: 96px;
  max-height: 96px;
  border-radius: 50%;
}

.icon {
  width: 48px;
  height: 48px;
}

.search-bar {
  height: 48px;
  background-color: #E2E8F0;
  border-radius: 50px;
}

.username {
  display: grid;
  align-items: center;
}

.header-bottom {
  display: grid;
  grid-auto-flow: column;
  grid-template-columns: 1fr 1fr;
  gap: 10%;
}

.bottom-left, .bottom-right{
  display: grid;
  grid-auto-flow: column;
  align-items: center;
  justify-items: center
}

.bottom-left {
  justify-content: start;
  gap: 1em;
}

button {
  height: 48px;
  width: 80%;
  background-color: #1992d4;
  color: white;
  border: none;
  border-radius: 30px;
}

